phase creation joueurs ok

--- a/RiskWeb/init.html
+++ b/RiskWeb/init.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Risque Jule Verne</h1>
+
     <label for="nbJoueurs">Nombre de joueurs</label><br>
     <select name="nbJoueurs" id="nbJoueurs">
         <option value="2">2 Joueurs</option>
@@ -19,14 +20,11 @@
         <option value="5">5 Joueurs</option>
         <option value="6">6 Joueurs</option>
     </select><br>
-    <div id='inputPlayers'>
-
-    </div>
+    <div id='inputPlayers'></div>
     <button type="submit" id="envoyer">envoyer</button>
 
-    <script src="assets/js/app.js">
+    <script src="assets/js/init.js"></script>
 
-    </script>
 </body>
 
 </html>
