correction suppression des players

--- a/RiskWeb/init.html
+++ b/RiskWeb/init.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
         <option value="6">6 Joueurs</option>
     </select><br>
     <div id='inputPlayers'></div>
-    <button type="submit" id="envoyer">envoyer</button>
+    <button type="submit" id="envoyer">Jouer</button>
 
     <script src="assets/js/init.js"></script>
 
