mise a jour commentaire

--- a/RiskWeb/game.html
+++ b/RiskWeb/game.html
@@ -273,7 +273,7 @@
     <div id="box-add-unit">
         <button id="+">+</button>
         <div id=nbr-unit>20</div>
-        <button id="+">-</button>
+        <button id="-">-</button>
     </div>
 
     <div id="box-list-player">
