ajout de l'affichage des player sur la page game

--- a/RiskWeb/game.html
+++ b/RiskWeb/game.html
@@ -277,7 +277,7 @@
     </div>
 
     <div id="box-list-player">
-        <ul>
+        <!-- <ul id='list-Players'>
             <li>Player 1 | 15 Territoires - 2 Continents</li>
             <li>Player 2 | 07 Territoires - 1 Continents</li>
             <li>Player 3 | 03  Territoires - 0 Continents</li>
@@ -285,7 +285,7 @@
             <li>Player 5 | 18 Territoires - 2 Continents</li>
             <li>Player 6 | 05  Territoires - 0 Continents</li>
 
-        </ul>
+        </ul> -->
     </div>
 <script src="assets/js/pregame.js"></script>
 </body></html>
