--- a/RiskWeb/init.html
+++ b/RiskWeb/init.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Risque Jule Verne</h1>
+    <h1>Risk Jule Verne</h1>
 
     <label for="nbJoueurs">Nombre de joueurs</label><br>
     <select name="nbJoueurs" id="nbJoueurs">
