--- a/RiskWeb/init.html
+++ b/RiskWeb/init.html
@@ -3,42 +3,75 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--Responsive!-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/init.css">
-    <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Tangerine&display=swap" rel="stylesheet">
     <title>Risk - Jules Verne</title>
+    <link rel="stylesheet" href="assets/css/init.css">
+    <!--Link Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Tangerine&display=swap" rel="stylesheet">
+    <!--Link Animate-->
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <!--Link Script Font Awesome-->
+    <script src="https://kit.fontawesome.com/132df433f5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <!-- Background Vidéo -->
-    <video autoplay muted loop id="myVideo">
-        <source src="assets/img/bg.webm" type="video/webm">
-    </video>
-    <!-- Menu Principal -->
-    <div id="menu-principal">
-        <h1>Risk Jules Verne</h1>
-        <button id="btn-jouer" onclick="funcbtnJouer()">Jouer</button>
-        <button>Paramètres</button>
-        <button>Quitter</button>
+    <!-- Menu Background Vidéo -->
+    <div id="video-fond">
+        <video autoplay muted loop id="myVideo" class="wow animated fadeIn" data-wow-duration="2s">
+            <source src="assets/video/bg.webm" type="video/mp4">
+        </video>
     </div>
-
-    <div id="content">
-        <div id="modal-players">
-            <label for="nbJoueurs">Nombre de joueurs</label><br>
-            <select name="nbJoueurs" id="nbJoueurs">
-                <option value="2">2 Joueurs</option>
-                <option value="3">3 Joueurs</option>
-                <option value="4">4 Joueurs</option>
-                <option value="5">5 Joueurs</option>
-                <option value="6">6 Joueurs</option>
-            </select><br>
-            <div id='inputPlayers'></div>
-            <button type="submit" id="envoyer">envoyer</button>
+    <!-- Menu Musics -->
+    <audio id="music1" style="display: none" loop>
+        <source src="assets/audio/song21.mp3" type="audio/mp3">
+        <source src="assets/audio/song21.ogg" type="audio/ogg">
+    </audio>
+    <audio controls id="music2" style="display: none" loop>
+        <source src="assets/audio/oceanSong.mp3" type="audio/mp3">
+    </audio>
+    <audio id="snare" src="assets/audio/bip.mp3" preload="auto"></audio>
+    <div id="body-menu">
+        <!-- Menu Principal -->
+        <h1 id="title" class="wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s">Risk Jules Verne</h1>
+        <div id="menuPrincipal" class="wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s">
+            <div id="btn" class="fadeOut">
+                <button class="buttonMenu" id="btn-jouer" onclick="funcbtnJouer()" onmouseover="stopPlayHTMLSound()">Jouer</button>
+                <button class="buttonMenu" onmouseover="stopPlayHTMLSound()">Paramètres</button>
+                <button class="buttonMenu" onmouseover="stopPlayHTMLSound()">Quitter</button>
+            </div>
+            <!--Menu Players-->
+            <div id="modal-players">
+                <label for="nbJoueurs">Nombre de Joueurs</label><br>
+                <select name="nbJoueurs" id="nbJoueurs">
+                    <option value="2">2 Joueurs</option>
+                    <option value="3">3 Joueurs</option>
+                    <option value="4">4 Joueurs</option>
+                    <option value="5">5 Joueurs</option>
+                    <option value="6">6 Joueurs</option>
+                </select><br>
+                <div id='inputPlayers'></div>
+                <button type="submit" id="envoyer">envoyer</button>
+            </div>
+        </div>
+        <div id="btn-logo-volume-off" class="wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s">
+            <i id="logo-volume-off" class="fas fa-volume-off" onclick="playMusics()"></i>
         </div>
     </div>
 
-    <script src="assets/js/init.js"></script>
+    <!--Script Wow Animation-->
+    <script src="assets/js/wow.js"></script>
+    <script>
+        new WOW().init();
 
-</body></html>
+    </script>
+    <!--Script init.js-->
+    <script src="assets/js/init.js"></script>
+    <!--Script sound.js-->
+    <script src="https://code.createjs.com/1.0.0/soundjs.min.js"></script>
+    </head>
+
+</body>
+
+</html>
