correction deleteplayer en front js / adaptation du js sur mapgame

--- a/RiskWeb/mapgame.html
+++ b/RiskWeb/mapgame.html
@@ -573,7 +573,7 @@
 
     <div id="container-player" class="row mt-4">
 
-        <div class="box col-12 m-3" id="box1">
+        <!-- <div class="box col-12 m-3" id="box1">
             <h3>Joueur 1</h3><span id="nbrterr">10 Territoires conquis</span>
             <br><span id="nbrcont">1 Continents conquis</span>
         </div>
@@ -596,7 +596,7 @@
         <div class="box col-12 m-3" id="box6">
             <h3>Joueur 6</h3><span id="nbrterr">10 Territoires conquis</span>
             <br><span id="nbrcont">1 Continents conquis</span>
-        </div>
+        </div> -->
 
     </div>
 
@@ -623,6 +623,7 @@
 
 
     <script src="assets/js/mapgame.js"></script>
+    <script src="assets/js/pregame.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
